start some work
Signed-off-by: Olivier Lamy <oliver.lamy@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,7 @@
     <module>documentation</module>
     <module>jetty-keystore</module>
     <module>jetty-unixdomain-server</module>
+    <module>jetty-javax-transformation</module>
   </modules>
 
   <build>
