--- a/jetty-home/pom.xml
+++ b/jetty-home/pom.xml
@@ -777,6 +777,11 @@
       <version>${project.version}</version>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-javax-transformation</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <!-- Demo Apps -->
     <dependency>
       <groupId>org.eclipse.jetty.demos</groupId>
