track exception to get some logs
Signed-off-by: Olivier Lamy <oliver.lamy@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -1072,6 +1072,11 @@
         <version>${inject-api.version}</version>
       </dependency>
       <dependency>
+        <groupId>jakarta.xml.bind</groupId>
+        <artifactId>jakarta.xml.bind-api</artifactId>
+        <version>3.0.0</version>
+      </dependency>
+      <dependency>
         <groupId>org.ow2.asm</groupId>
         <artifactId>asm</artifactId>
         <version>${asm.version}</version>
